--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Мягкий preload -->
+  <!-- preload -->
   <link rel="preload" as="image" href="./assets/bg.png">
   <link rel="preload" as="image" href="./assets/logo.png">
   <link rel="preload" as="image" href="./assets/champion.png">
 
-  <!-- ranks -->
   <link rel="preload" as="image" href="./assets/rank1.png">
   <link rel="preload" as="image" href="./assets/rank2.png">
   <link rel="preload" as="image" href="./assets/rank3.png">
@@ -23,7 +22,6 @@
   <link rel="preload" as="image" href="./assets/rank6.png">
   <link rel="preload" as="image" href="./assets/rank7.png">
 
-  <!-- t9 -->
   <link rel="preload" as="image" href="./assets/t9.png">
 
   <style>
@@ -205,6 +203,7 @@
       overflow:hidden;
       cursor:pointer;
 
+      /* ускорение (на ПК норм) */
       content-visibility:auto;
       contain-intrinsic-size: 120px 340px;
     }
@@ -230,10 +229,7 @@
     .place.p2{ color:rgba(220,226,235,.98); border-color:rgba(220,226,235,.55); box-shadow:0 0 14px rgba(220,226,235,.12); }
     .place.p3{ color:rgba(205,127,50,.98); border-color:rgba(205,127,50,.55); box-shadow:0 0 14px rgba(205,127,50,.12); }
 
-    /* ===== имя/щит/достижения ===== */
     .namebox{min-width:0}
-
-    /* ✅ grid так, чтобы и имя+T9, и строка достижений начинались ровно под ИКОНКОЙ щита */
     .namegrid{
       display:grid;
       grid-template-columns: 46px 1fr auto;
@@ -265,7 +261,6 @@
       min-width:0;
     }
 
-    /* ✅ t9 справа от имени (если есть) */
     .t9-mini{
       grid-column:3;
       grid-row:1;
@@ -275,7 +270,6 @@
       opacity:.98;
     }
 
-    /* ✅ Достижения начинаются ровно по левой границе щита */
     .ach-mini{
       grid-column:1 / 4;
       grid-row:2;
@@ -306,14 +300,14 @@
     .score-pill .lbl{font-size:10px;color:rgba(255,255,255,.55);letter-spacing:.06em;text-transform:uppercase}
     .score-pill .val{margin-top:4px;font-size:20px;font-weight:800;color:rgba(255,255,255,.92)}
 
-    /* ===== MOBILE: фиксируем верх, скроллится только рейтинг ===== */
+    /* ===== MOBILE: фиксируем верх (без sticky) и скроллим ТОЛЬКО список ===== */
     @media (max-width: 760px){
-      body{ overflow:hidden; } /* ✅ чтобы не скроллилась вся страница */
+      body{ overflow:hidden; } /* страница не скроллится */
 
       .wrap{
         width:min(1200px,94vw);
-        height:100vh;             /* ✅ вся высота экрана */
-        margin:0 auto;            /* без нижнего “пустого” скролла */
+        height:100dvh;            /* важно для андроид */
+        margin:0 auto;
         padding:14px 0 14px;
         display:flex;
         flex-direction:column;
@@ -321,46 +315,40 @@
       }
 
       .topbar{
-        position:sticky;
-        top:0;
-        z-index:30;
         display:flex;
         flex-direction:column;
         align-items:center;
         gap:10px;
         text-align:center;
-        margin:0;
       }
       .brand{min-width:0;justify-content:center}
       .brand img{height:42px}
       .season-name{text-align:center;max-width:92vw}
       .center-title .title{font-size:18px;letter-spacing:.08em}
 
-      .controls{
-        position:sticky;
-        top: calc(0px + 0px); /* topbar уже sticky и занимает место сам */
-        z-index:29;
-        margin-top:0;
-      }
+      .controls{ margin-top:0; }
 
       .panel{
         margin-top:0;
-        flex:1 1 auto;  /* ✅ панель занимает остаток */
+        flex:1 1 auto;
         display:flex;
         flex-direction:column;
-        overflow:hidden; /* ✅ чтобы внутри скроллилось только .lb */
+        overflow:hidden; /* внутри будет скролл */
       }
-
       .panel-head{ flex:0 0 auto; }
 
       .lb{
         flex:1 1 auto;
-        overflow:auto;                 /* ✅ скролл только рейтинга */
+        overflow:auto;                 /* скролл только рейтинга */
         -webkit-overflow-scrolling:touch;
         padding:12px 10px 16px;
       }
 
+      /* ✅ главное исправление тонких полос: выключаем content-visibility на мобиле */
       .lb-row{
+        content-visibility:visible;
+        contain-intrinsic-size:auto;
+
         grid-template-columns:58px 1fr auto;
         gap:10px;
         padding:12px 12px;
@@ -374,11 +362,9 @@
         row-gap:6px;
       }
       .rank-mini{width:36px;height:36px}
-
       .nm{font-size:20px}
       .t9-mini{width:30px;height:30px}
 
-      /* ✅ На телефоне достижения — одной строкой (если много — скролл), t9 исключён */
       .ach-mini{
         flex-wrap:nowrap;
         overflow-x:auto;
@@ -394,7 +380,7 @@
       .score-pill .val{font-size:18px}
     }
 
-    /* ====== Modal (оставляем как было, ты сказал “отлично, оставляем”) ====== */
+    /* ====== Modal (как было) ====== */
     .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.70);backdrop-filter:blur(6px);z-index:50}
     .card{
       width:min(560px,92vw);
@@ -445,49 +431,6 @@
       font-family:Cinzel,serif;letter-spacing:.10em;font-weight:700;text-transform:uppercase;
       color:rgba(240,222,154,.90);margin:16px 0 10px;font-size:14px;
     }
-
-    .medals{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:10px;margin-top:10px;width:100%}
-    .pill{
-      border:1px solid rgba(214,181,106,.35);
-      border-radius:14px;
-      background:rgba(0,0,0,.25);
-      padding:10px 12px;
-      display:flex;align-items:center;justify-content:space-between;gap:8px;
-      box-shadow:0 12px 26px rgba(0,0,0,.35) inset;
-      min-width:0;
-    }
-    .pill .left{display:flex;align-items:center;gap:8px;font-weight:700;color:rgba(255,255,255,.9);min-width:0}
-    .pill .left span{white-space:nowrap}
-    .pill .num{font-weight:800;color:rgba(255,255,255,.92);white-space:nowrap}
-
-    .ach-wrap{border:1px solid rgba(214,181,106,.25);border-radius:16px;background:rgba(0,0,0,.20);padding:14px;max-width:100%;overflow:hidden}
-    .ach-grid{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:14px;justify-items:center;align-items:center;width:100%;max-width:100%}
-    .ach-item{width:108px;height:108px;border-radius:18px;border:1px solid rgba(214,181,106,.25);background:rgba(0,0,0,.22);display:flex;align-items:center;justify-content:center;overflow:hidden;cursor:pointer;max-width:100%}
-    .ach-item img{width:78%;height:78%;object-fit:contain;filter:drop-shadow(0 12px 18px rgba(0,0,0,.55))}
-    .ach-t9{grid-column:1/span 3;width:100%;max-width:100%;height:170px;border-radius:20px;border:1px solid rgba(214,181,106,.45);background:rgba(0,0,0,.22);display:flex;align-items:center;justify-content:center;box-shadow:0 0 28px rgba(214,181,106,.18);cursor:pointer;overflow:hidden}
-    .ach-t9 img{width:140px;height:140px;object-fit:contain}
-
-    @media (max-width: 420px){
-      .pill{padding:9px 10px;gap:6px}
-      .pill .left{gap:6px;font-size:12px}
-      .pill .num{font-size:14px}
-      .ach-item{width:92px;height:92px;border-radius:16px}
-      .ach-t9{height:150px;border-radius:18px}
-      .ach-t9 img{width:120px;height:120px}
-      .ach-grid{gap:10px}
-    }
-
-    .history-wrap{border:1px solid rgba(214,181,106,.25);border-radius:16px;background:rgba(0,0,0,.16);padding:12px}
-    .history-scroll{max-height:44vh;overflow:auto;overflow-x:hidden;-webkit-overflow-scrolling:touch;display:flex;flex-direction:column;gap:14px;padding-right:6px}
-    .season-block-title{font-family:Cinzel,serif;letter-spacing:.08em;font-weight:800;text-transform:uppercase;color:rgba(240,222,154,.92);font-size:13px;text-align:center;margin:6px 0 2px}
-    .hist{display:flex;flex-direction:column;gap:10px}
-    .hist-card{border:1px solid rgba(214,181,106,.22);border-radius:14px;background:rgba(0,0,0,.18);padding:10px 12px;display:grid;grid-template-columns:86px 1fr auto;align-items:center;gap:10px;max-width:100%}
-    .hist-date{font-weight:800;font-size:18px;color:rgba(255,255,255,.94)}
-    .hist-game{color:rgba(240,222,154,.90);font-weight:800;text-align:center}
-    .chips{display:flex;flex-direction:column;gap:8px;align-items:flex-end}
-    .chip{border:1px solid rgba(214,181,106,.25);background:rgba(0,0,0,.22);border-radius:999px;padding:6px 10px;font-size:12px;color:rgba(255,255,255,.88);white-space:nowrap;max-width:100%}
-
-    .hint{color:rgba(255,255,255,.45);font-size:12px;margin-top:12px;text-align:center}
 
     .viewer{display:none;position:fixed;inset:0;background:rgba(0,0,0,.85);z-index:80;padding:18px;align-items:center;justify-content:center}
     .viewer.open{display:flex}
@@ -626,9 +569,10 @@
   function miniAchievementsHtml(list){
     const { hasT9, rest } = splitMiniAchievements(list);
     const icons = rest.slice(0, 12);
-    const achLine = icons.length
-      ? `<div class="ach-mini">${icons.map(t => `<img loading="lazy" decoding="async" src="./assets/${t}.png" alt="${t}">`).join("")}</div>`
-      : `<div class="ach-mini"></div>`;
+
+    const achLine = `<div class="ach-mini">${
+      icons.map(t => `<img loading="lazy" decoding="async" src="./assets/${t}.png" alt="${t}">`).join("")
+    }</div>`;
 
     const t9 = hasT9
       ? `<img class="t9-mini" loading="eager" decoding="async" src="./assets/t9.png" alt="t9">`
@@ -711,6 +655,34 @@
     viewer.classList.add("open");
   }
 
+  function buildHistoryHtml(history){
+    const blocks = (history || []);
+    if (!blocks.length) return `<div class="hint">Нет игр</div>`;
+
+    const parts = blocks.map(b => {
+      const games = (b.games || []);
+      const rows = games.map(g => `
+        <div class="hist-card">
+          <div class="hist-date">${g.date || "—"}</div>
+          <div class="hist-game">${g.game_name || "—"}</div>
+          <div class="chips">
+            <div class="chip">место: ${g.place ?? "—"}</div>
+            <div class="chip">очки: ${g.points ?? "—"}</div>
+          </div>
+        </div>
+      `).join("");
+
+      return `
+        <div>
+          <div class="season-block-title">Сезон «${b.season}»</div>
+          <div class="hist">${rows || `<div class="hint">Нет игр</div>`}</div>
+        </div>
+      `;
+    }).join("");
+
+    return `<div class="history-wrap"><div class="history-scroll">${parts}</div></div>`;
+  }
+
   function buildAchievementsHtml(list){
     const items = (list || []).map(x => String(x).trim()).filter(Boolean);
     if (!items.length) return `<div class="hint">Пока нет достижений</div>`;
@@ -739,34 +711,6 @@
 
     html += `</div></div>`;
     return html;
-  }
-
-  function buildHistoryHtml(history){
-    const blocks = (history || []);
-    if (!blocks.length) return `<div class="hint">Нет игр</div>`;
-
-    const parts = blocks.map(b => {
-      const games = (b.games || []);
-      const rows = games.map(g => `
-        <div class="hist-card">
-          <div class="hist-date">${g.date || "—"}</div>
-          <div class="hist-game">${g.game_name || "—"}</div>
-          <div class="chips">
-            <div class="chip">место: ${g.place ?? "—"}</div>
-            <div class="chip">очки: ${g.points ?? "—"}</div>
-          </div>
-        </div>
-      `).join("");
-
-      return `
-        <div>
-          <div class="season-block-title">Сезон «${b.season}»</div>
-          <div class="hist">${rows || `<div class="hint">Нет игр</div>`}</div>
-        </div>
-      `;
-    }).join("");
-
-    return `<div class="history-wrap"><div class="history-scroll">${parts}</div></div>`;
   }
 
   async function openProfile(playerId){
@@ -815,7 +759,6 @@
     });
   }
 
-  /* SPEED: прогрев картинок */
   function preloadImages(urls){
     urls.forEach((url) => {
       const img = new Image();
